# specs

./: .gitignore  AGENTS.md  Makefile  README.md  agentic-harness-core_v1.0.md  bootstrap.go  bootstrap_test.go  discover.go  discover_test.go  errors.go  go.mod  lifecycle.go  lifecycle_test.go  load.go  load_test.go  pyproject.toml  render.go  render_test.go  requirements.go  runtime-layer_1.0.md  save.go  save_test.go  serialize.go  services-architecture_v1.0.md  smoke_test.go  spec.go  spec_test.go  tasks.go  testspec.go  validate.go  validate_test.go
.agent-fox/: config.toml  steering.md
.github/workflows/: ci.yml  release.yml
afspec/: __init__.py  bootstrap.py  discovery.py  exceptions.py  ids.py  lifecycle.py  loader.py  models.py  renderer.py  saver.py  validator.py
afspec/schemas/: prd-frontmatter.v1.json  requirements.v1.json  tasks.v1.json  test_spec.v1.json
afspec/tests/: __init__.py  conftest.py  test_bootstrap.py  test_discovery.py  test_ids.py  test_lifecycle.py  test_loader.py  test_models.py  test_properties.py  test_renderer.py  test_saver.py  test_smoke.py  test_validator.py
cmd/af/: main.go
docs/: README.md  af-spec-skill.md  agentic-harness-core-v1.0.md  agentic-harness-core_v1.0.md  coordination-layer.md  mvp-prd.md  runtime-layer.md  runtime-layer_1.0.md  scion-runtime-mapping.md  services-architecture.md  services-architecture_v1.0.md  spec-format-design.md  spec-format.md  spec-format_v1.1.md  spec-tooling.md  telos-prd-v4.md
docs/api/: go.md  python.md
docs/errata/: 01_lifecycle_save_guard.md  01_monorepo_restructure_scaffold_tests.md  01_validate_internal_package_location.md  02_accept_prd_init_state.md  02_intent_normalization.md  04_integration_tests_blocked_by_spec01.md  04_makefile_python_targets.md
docs/examples/: bootstrap_and_discovery.md  comparison.md  lifecycle.md  loading_and_saving.md  rendering.md  validation.md
docs/specs/: README.md  spec-format_v1.2.md
examples/: README.md
examples/hub_example/: qa1.json  qa3.json
examples/migration/: MIGRATION_REPORT.md  Makefile  compare.py  go.mod  main.go  main.py  programmatic_audit_hub.py  pyproject.toml
internal/ci/: ci_test.go
internal/discovery/: graph.go  metadata.go  scan.go
internal/ioutil/: read.go  write.go
internal/jsonutil/: marshal.go  unmarshal.go
internal/lifecycle/: guards.go  intent.go  transitions.go
internal/prd/: intent.go  parse.go
internal/render/: ears.go  requirements.go  tasks.go  testspec.go
internal/schema/: embed.go  prd-frontmatter.v1.json  requirements.v1.json  tasks.v1.json  test_spec.v1.json
internal/validate/: helpers.go
internal/version/: version.go  version_test.go
scripts/: check-version.sh
speclib/: __init__.py  agent.py  auth.py  cli.py  config.py  prompts.py  session.py  tools.py
testdata/all_ears_patterns/: prd.md  requirements.json  tasks.json  test_spec.json
testdata/bad_yaml/: prd.md
testdata/crossfile_errors/: prd.md  requirements.json  tasks.json  test_spec.json
testdata/draft_spec/: prd.md  requirements.json  tasks.json  test_spec.json
testdata/malformed_json/: prd.md  (+3 more)
tests/: test_auth.py  test_campaign.py  test_cli.py  test_config.py  test_docs.py  test_session.py  test_session_agent.py
(+83 files in other folders)
