[project]
name = "speclib"
version = "0.1.0"
description = "Spec creation tool for standalone authoring of spec packages"
requires-python = ">=3.14"
dependencies = [
    "afspec>=0.1.0",
    "anthropic[vertex,bedrock]>=0.40.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
af-spec = "speclib.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/speclib/speclib"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages/afspec/tests", "packages/speclib/tests"]
import_mode = "importlib"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
afspec = { path = "packages/afspec", editable = true }
