[project]
name = "speclib-workspace"
version = "0.0.0"
description = "Monorepo workspace for speclib, spec-cli, and afspec"
requires-python = ">=3.14"
dependencies = [
    "afspec>=0.1.0",
    "anthropic[vertex,bedrock]>=0.40.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "spec-cli>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/afspec/tests", "packages/speclib/tests", "packages/spec-cli/tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
afspec = { path = "packages/afspec", editable = true }
speclib = { path = "packages/speclib", editable = true }
spec-cli = { path = "packages/spec-cli", editable = true }
