[project]
name = "af-core"
version = "0.9.0"
description = "Monorepo workspace for the agent-fox agentic development harness core"
requires-python = ">=3.14"
dependencies = [
    "spec-cli>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/afspec/tests", "packages/speclib/tests", "packages/spec-cli/tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
afspec = { workspace = true }
speclib = { workspace = true }
spec-cli = { workspace = true }
